2011-09-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (fn_completion, tab_completion, isdoublewidth)
	src/win/screenbuf.h (sb_calc_length) src/win/wcommon.h (open_printer,
	close_printer) src/win/wgraph.c (UnicodeText) src/win/winmain.c
	(ShutDown, CheckMemory) src/win/wmenu.c: Add missing prototypes, 
	make local functions static.

	* src/alloc.c src/alloc.h src/ansicheck.h src/command.c src/command.h
	src/plot.c src/scanner.c src/stdfn.c src/syscfg.h src/term.c:
	Remove conditional code for Atari Pure C and Borland C compilers.

	* src/axis.c src/command.c src/datafile.c src/getcolor.c src/misc.c
	src/pm3d.c src/variable.c: Remove unused variables and prototypes.

2011-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm term/canvas.trm term/js/gnuplot_mouse.js
	term/js/gnuplot_svg.js:  Add support for time coordinates to the mousing
	code used by svg and canvas terminals.  In this initial implementation,
	only the primary X axis is checked, and there is no provision for a
	user-supplied format.

2011-09-02  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/cairo.trm:  Check for the presence of cairo-ps.h
	before trying to build the epscairo terminal.

2011-09-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/makefile.ami docs/old/README.ami docs/old/README.win 
	src/gnuplot.prj src/linkopt.ztc: Removed.

	* config/makefile.unx docs/Makefile.in src/Makefile.am: Remove
	references to obsolete files.

2011-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Yet another rewrite of the installation path rules for
	TeX files.
	Bug #3401370

	* configure.in: Remove some obsolete status messages.

2011-09-01  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm (EMF_put_text):  Use iconv to handle Shift_JIS encoding.

2011-08-31  Ethan A Merritt  <merritt@u.washington.edu>

	* m4/apple.m4:  Revert change of 2011-07-23 (aquaterm LIBS)
