@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: canvas.trm,v 1.51 2011/08/02 20:40:31 sfeam Exp $
+ * $Id: canvas.trm,v 1.52 2011/09/04 02:05:24 sfeam Exp $
  *
  */
 
@@ -617,7 +617,7 @@ CANVAS_text()
 	 */
 	if (axis_array[FIRST_X_AXIS].is_timedata) {
 	    fprintf(gpoutfile, "gnuplot.plot_timeaxis_x = \"%s\";\n",
-		(mouse_mode == MOUSE_COORDINATES_ALT && mouse_alt_string) ? mouse_alt_string
+		(mouse_alt_string) ? mouse_alt_string
 		: (mouse_mode == 4) ? "Date"
 		: (mouse_mode == 5) ? "Time"
 		: "DateTime"
